@@ -1,6 +1,6 @@
-Date: 2021-03-20
+Date: 2021-03-21
 Package: CHNOSZ
-Version: 1.4.0-29
+Version: 1.4.0-30
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
