@@ -10,7 +10,6 @@ albite,Ab,Na(AlSi3)O8,cr2,HDNB78,OBIGT.1,1978-05-05,cal,-886096.268,NA,53.9193,N
 "albite,low",Lo-Ab,Na(AlSi3)O8,cr,HDNB78,NA,1978-05-05,cal,-886308,-939680,49.51,NA,100.07,61.7,13.9,-15.01,0,0,0,0,1400
 almandine,Alm,Fe3Al2Si3O12,cr,HDNB78,RH95.3,2020-07-06,cal,-1181142,-1258293,81.88,82.05,115.28,97.52,33.64,-18.73,0,0,0,0,848
 almandine,Alm,Fe3Al2Si3O12,cr2,HDNB78,OBIGT.1,2020-07-06,cal,-1181153.741,NA,78.21,NA,115.28,107.09,14.86,-10.63,0,0,0,0,1600
-alunite,Alu,KAl3(OH)6(SO4)2,cr,HDNB78,NA,1978-05-05,cal,-1113600,-1235600,78.4,NA,293.6,153.45,0,-54.95,0,0,0,0,650
 "amesite,14A",14A-Am,Mg4Al2(Al2Si2)O10(OH)8,cr,HDNB78,NA,1978-05-05,cal,NA,NA,108.9,NA,205.4,172.59,34.98,-41.67,0,0,0,0,848
 "amesite,14A",14A-Am,Mg4Al2(Al2Si2)O10(OH)8,cr2,HDNB78,OBIGT.1,1978-05-05,cal,3.895,NA,110.1233,NA,205.4,169.4,41.24,-44.37,0,0,0,0,1000
 "amesite,7A",Ams-7A,Mg2Al(AlSi)O5(OH)4,cr,HDNB78,NA,1978-05-05,cal,NA,NA,52,NA,103,81.03,24.738,-20.23,0,0,0,0,1000
