@@ -3,6 +3,7 @@ acanthite,Acn,Ag2S,cr,HDNB78,NA,1978-05-05,cal,-9446,-7550,34.3,NA,34.2,15.63,8.
 acanthite,Acn,Ag2S,cr2,HDNB78,OBIGT.1,1978-05-05,cal,-9235.197,-7024.866,35.3543,NA,34.2,1.819,53,0,0,0,0,0,620
 acanthite,Acn,Ag2S,cr3,HDNB78,OBIGT.1,1978-05-05,cal,-8227.324,-4960.457,38.898,NA,34.2,21.6,0,0,0,0,0,0,1000
 alabandite,Alb,MnS,cr,HDNB78,NA,1978-05-05,cal,-52178,-51000,19.2,NA,21.46,11.4,1.8,0,0,0,0,0,1803
+alunite,Alu,KAl3(OH)6(SO4)2,cr,HDNB78,NA,1978-05-05,cal,-1113600,-1235600,78.4,NA,293.6,153.45,0,-54.95,0,0,0,0,650
 anglesite,Ang,PbSO4,cr,HDNB78,NA,1978-05-05,cal,-194353,-219870,35.51,NA,47.95,10.96,31,4.2,0,0,0,0,1100
 anhydrite,Anh,CaSO4,cr,HDNB78,NA,1978-05-05,cal,-315925,-342760,25.5,NA,45.94,16.78,23.6,0,0,0,0,0,1453
 artinite,Art,Mg2(OH)2(CO3)*3H2O,cr,HDNB78,NA,1978-05-05,cal,-613915,-698043,55.67,NA,96.9,70.87,27.66,-7.43,0,0,0,0,1000
