@@ -172,7 +172,7 @@ octanal,NA,CH3(CH2)6CHO,aq,SS93,NA,1993-01-14,cal,-20310,-83550,73.2,162.1,138.5
 nonanal,NA,CH3(CH2)7CHO,aq,SS93,NA,1993-01-14,cal,-18100,-89060,79.9,183.3,154.3,22.8599,45.0867,-5.6439,-4.6428,156.0486,13.149,-0.0577,0
 decanal,NA,CH3(CH2)8CHO,aq,SS93,NA,1993-01-14,cal,-16600,-95290,86.6,204.5,170.1,25.037,50.0234,-6.7709,-4.8469,173.4014,15.2436,-0.0133,0
 "formic acid",NA,H2CO2,aq,Sho95,NA,1992-06-17,cal,-88982,-101680,38.9,22.8,34.69,6.3957,7.7713,2.8318,-3.1002,26.1,-3.1,-0.33,0
-"acetic acid",NA,C2H4O2,aq,Sho95,NA,1992-03-06,cal,-94760,-116100,42.7,40.56,52.01,11.6198,5.218,2.5088,-2.9946,42.076,-1.5417,-0.15,0
+"acetic acid",CH3COOH,C2H4O2,aq,Sho95,NA,1992-03-06,cal,-94760,-116100,42.7,40.56,52.01,11.6198,5.218,2.5088,-2.9946,42.076,-1.5417,-0.15,0
 "propanoic acid",NA,C3H6O2,aq,Sho95,NA,1992-03-06,cal,-93450,-122470,49.4,60.5,67.9,11.0057,18.7077,-0.7792,-3.5523,62.97,-1.19,-0.15,0
 "n-butanoic acid","butanoic acid",C4H8O2,aq,Sho95,NA,1992-03-06,cal,-91210,-127950,56.1,80.5,84.61,13.2702,23.3487,-0.6985,-3.7441,72.4342,2.9924,-0.2155,0
 "n-pentanoic acid",NA,C5H10O2,aq,Sho95,NA,1992-03-06,cal,-89240,-133690,62.8,103.3,100.5,15.4596,28.3156,-1.8374,-3.9495,91.0659,5.245,-0.171,0
